--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,10 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravelcollective/html": "^6.3",
+        "league/csv": "^9.8",
+        "maatwebsite/excel": "^3.1",
+        "phpmailer/phpmailer": "^6.6",
+        "phpoffice/phpspreadsheet": "^1.25",
         "yajra/laravel-datatables-buttons": "^9.1",
         "yajra/laravel-datatables-html": "^9.3",
         "yajra/laravel-datatables-oracle": "^10.2"
