--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,30 @@
 {
     "name": "laravel/laravel",
     "type": "project",
-    "description": "PHP Newsletter",
-    "keywords": ["framework", "laravel"],
+    "description": "The skeleton application for the Laravel framework.",
+    "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.19",
-        "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7",
-        "laravelcollective/html": "^6.3",
-        "league/csv": "^9.8",
-        "maatwebsite/excel": "^3.1",
-        "phpmailer/phpmailer": "^6.6",
-        "phpoffice/phpspreadsheet": "^1.25",
-        "yajra/laravel-datatables-buttons": "^9.1",
-        "yajra/laravel-datatables-html": "^9.3",
-        "yajra/laravel-datatables-oracle": "^10.2"
+        "laravel/framework": "^10.10",
+        "laravel/sanctum": "^3.3",
+        "laravel/tinker": "^2.8",
+        "laravelcollective/html": "^6.4",
+        "league/csv": "^9.15",
+        "phpmailer/phpmailer": "^6.9",
+        "phpoffice/phpspreadsheet": "^2.0",
+        "yajra/laravel-datatables-buttons": "^10.0",
+        "yajra/laravel-datatables-html": "^10.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
-        "laravel/sail": "^1.0.1",
+        "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.1",
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -65,9 +63,10 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
