--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:wuKWRpp3iYmghaKgwdcaeikrl+HzU66/AQRaVZzjn04=
 APP_DEBUG=true
 APP_URL=http://localhost
 
