--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "janickiy/html": "^v1.0.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "laravelcollective/html": "^6.4",
         "league/csv": "^9.15",
         "phpmailer/phpmailer": "^6.9",
         "phpoffice/phpspreadsheet": "^2.0",
